# neurodock

./: .commitlintrc.json  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  BOOTSTRAP_PR_DESCRIPTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  GOVERNANCE.md  LICENSE  MANIFESTO.md  MCP-DISTRIBUTION.md  Makefile  PRIVACY.md  PR_DESCRIPTION.md  README.md  RELEASE_CHECKLIST_v0.2.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_TAG_PLAN_v0.2.0.md  ROADMAP.md  SECURITY.md  TESTING_LOCAL.md  glama.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json  wrangler.toml
.changeset/: README.md  asd-meeting-translator-v0-1-0.md  chronometric-r5-profile-fields.md  cli-0-4-3.md  cli-doctor-manifest-origin-check.md  eval-neurotype-slices.md  evals-v0-0-1.md  extension-browser-v0-0-1.md  extension-native-host-cold-start-timeout.md  extension-native-messaging-permission.md  extension-neurotype-addendum-core-cutover.md  extension-tourette-and-r5-ui-hints.md  lmstudio-json-schema-structured-output.md  mcp-guardrail-v0-0-1.md  mcp-translation-v0-0-1.md  native-host-chromium-origin-filtering.md  native-host-real-extension-ids.md  native-host-version-from-package.md  nd-native-host-launcher.md  onboarding-setup-command-latest.md  plugin-protocol-adr-0007.md  shared-neurotype-shaping-artifact.md  spotty-rivers-tailor.md  task-fractionator-r2-neurotype-hooks.md  thin-snakes-deliver-skills.md  translation-neurotype-shaping-server.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude-reports/2026-05-25-translate-not-summarize/: SAMPLE-OUTPUTS.md
.claude/agents/: accessibility-auditor.md  adhd-advocate.md  asd-advocate.md  audhd-advocate.md  browser-extension-builder.md  changelog-keeper.md  cli-expert.md  clinical-expert.md  clinical-reviewer.md  code-deep-diver.md  community-triage.md  core-expert.md  design-system-keeper.md  doc-writer.md  docs-curator.md  dyslexia-advocate.md  dyspraxia-advocate.md  eval-curator.md  evals-expert.md  governance-author.md  integration-tester.md  mcp-architect.md  mcp-chronometric-expert.md  mcp-cognitive-graph-expert.md  mcp-guardrail-expert.md  mcp-server-builder.md  mcp-task-fractionator-expert.md  mcp-translation-expert.md  native-host-expert.md  ocd-advocate.md  orchestrator.md  plugin-manifest-validator.md  production-readiness-auditor.md  release-pilot.md  repo-bootstrapper.md  skill-author.md  tourette-advocate.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  rfc.md
.github/codeql/: codeql-config.yml
.github/scripts/: version-impact.sh
.github/workflows/: README.md  a11y.yml  ci.yml  codeql.yml  eval.yml  extension.yml  pr-version-check.yml  release.yml
claude-code/neurodock/: .mcp.json  README.md
docs/: ACCURACY_AUDIT.md  README.md  astro.config.mjs  branding.md  package.json  tsconfig.json
docs/decisions/: 0001-chronometric-tool-design.md  0002-cognitive-graph-tool-design.md  0003-task-fractionator-tool-design.md  0004-profile-schema-design.md  0005-translation-tool-design.md  0006-guardrail-tool-design.md  0007-plugin-protocol.md  0008-distribution-and-remote-strategy.md  0009-remote-transport-and-hosting.md  0010-opt-in-hosted-full-experience.md  0011-neurotype-schema-strategy.md  0012-shared-neurotype-shaping-layer.md
docs/papers/: 0001-nd-safe-ai-position-paper.md  0001-nd-safe-ai-references.bib  README.md
docs/src/: env.d.ts
examples/: README.md
examples/claude-desktop/: README.md  sample-conversation.md
examples/code-review-workflow/: README.md  (+1 more)
mcpb/: README.md
outreach/: position-what-we-are-building.md  rfc-founding-scope.md
plugins/: README.md
profiles/: README.md  adhd.yaml  audhd.yaml  burnout-recovery.yaml  dyslexic.yaml  dyspraxia.yaml  educator-semester.yaml  low-stimulation.yaml  ocd.yaml  student-university.yaml  tourette.yaml
scripts/: README.md  add-license-headers.mjs  dev-setup.sh  sync-skills.mjs  verify-phase1-hook.py  verify-phase2-watchdog.inner.ts  verify-phase2-watchdog.mjs  verify-published-tarball.mjs
(+217 files in other folders)
